Fix for jumping nav items and footer links

--- a/assets/src/scss/components/_footer.scss
+++ b/assets/src/scss/components/_footer.scss
@@ -14,6 +14,10 @@
     }
   }
 
+  .footer-links {
+    font-weight: bold;
+  }
+
   .copyright-text {
     font-size: smaller;
   }
